fixed price alignment

--- a/app/assets/stylesheets/pages/_bill-show.scss
+++ b/app/assets/stylesheets/pages/_bill-show.scss
@@ -43,8 +43,8 @@
 
 .container-order i{
   color: $lblue-easyfork;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
   &:hover{
     font-size: 22px;
   }
@@ -56,7 +56,7 @@
 
 .price-i{
 position: absolute;
-left: 140px;
+left: 210px;
 width: 65px;
 font-weight: 500;
 }
